--- a/index.html
+++ b/index.html
@@ -1,20 +1,53 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Nejma Aidoun</title>
 </head>
+
 <body>
     <header>
 
+        <nav>
+            <div class="navLinksLeft">
+                <a href="">Accueil</a>
+                <a href="">A propos</a>
+                <a href="">Portfolio</a>
+            </div>
+
+            <img src="assets/img/signature.png" alt="Nejma Aidoun signature" class="imageNav">
+
+            <div class="navLinksRight">
+                <a href="">Formations</a>
+                <a href="">Expériences professionnelles</a>
+                <a href="">Compétences</a>
+            </div>
+        </nav>
+
+        <div class="line"></div>
+
+        <section class="header">
+            <div class="headerLeft">
+                <h1>Rise Above The Storm,</h1>
+                <h1>You Will Find The Sunshine</h1>
+                <div class="line2"></div>
+            </div>
+            <div class="headerRight">
+                <img src="assets/img/signature.png" alt="Nejma Aidoun signature">
+            </div>
+
+        </section>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
+
 </html>
