--- a/index.html
+++ b/index.html
@@ -39,11 +39,35 @@
             <div class="headerRight">
                 <img src="assets/img/signature.png" alt="Nejma Aidoun signature">
             </div>
-
         </section>
     </header>
     <main>
-
+        <section id="about">
+            <h1>A propos de Nejma</h1>
+            <div class="lineMain"></div>
+            <div class="aboutBlocks">
+                <div class="aboutLeft">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta adipisci eveniet incidunt
+                        repellendus. Excepturi facilis tenetur ex, officiis amet vel aliquid distinctio neque temporibus
+                        qui laboriosam blanditiis magni numquam velit.
+                        Nam velit adipisci quaerat eligendi in fugit odio ducimus repellendus repellat neque, accusamus,
+                        ea corporis fugiat impedit nulla sapiente voluptatum aut ad, harum dolorem sed? Autem incidunt
+                        repellat sequi facere.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium amet, eveniet non minima
+                        optio tempora odit repellat architecto ducimus atque corrupti at ipsam et provident omnis esse!
+                        Eum, voluptate dolore.
+                        Voluptatibus reprehenderit porro perspiciatis non saepe magnam inventore modi similique fugiat
+                        necessitatibus architecto ullam tenetur repellat ratione atque temporibus, minima dolor illo
+                        optio quasi impedit amet consequuntur sint officiis! Eos?</p>
+                </div>
+                <div class="aboutRight">
+                    <img src="assets/img/blockOne.jpeg" alt="">
+                </div>
+            </div>
+        </section>
+        <section id="portfolio">
+            <img src="" alt="">
+        </section>
     </main>
     <footer>
 
