--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://kit.fontawesome.com/14fbcf0019.js" crossorigin="anonymous"></script>
     <title>Nejma Aidoun</title>
 </head>
 
@@ -14,9 +15,9 @@
 
         <nav>
             <div class="navLinksLeft">
-                <a href="">Accueil</a>
-                <a href="">A propos</a>
-                <a href="">Portfolio</a>
+                <a href="#">Accueil</a>
+                <a href="#about">A propos</a>
+                <a href="#portfolio">Portfolio</a>
             </div>
 
             <img src="assets/img/signature.png" alt="Nejma Aidoun signature" class="imageNav">
@@ -43,7 +44,7 @@
     </header>
     <main>
         <section id="about">
-            <h1>A propos de Nejma</h1>
+            <h1 class="title">A propos de Nejma</h1>
             <div class="lineMain"></div>
             <div class="aboutBlocks">
                 <div class="aboutLeft">
@@ -66,7 +67,23 @@
             </div>
         </section>
         <section id="portfolio">
-            <img src="" alt="">
+            <h1 class="title">Portfolio</h1>
+            <div class="lineMain"></div>
+            <div class="carrousel">
+                <div class="slides">
+                    <a href="https://angular.nejma-aidoun.fr/"><img src="assets/img/shonenjump.jpeg" alt="" /></a>
+                    
+                    <div class="info">
+                        <p class="text"></p>
+                    </div>
+                </div>
+                <i class="fas fa-chevron-circle-left" id="back"></i>
+                <i class="fas fa-chevron-circle-right" id="forward"></i>
+            </div>
+        </section>
+
+        <section id="">
+            <h1 class=""></h1>
         </section>
     </main>
     <footer>
