--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <img src="assets/img/signature.png" alt="Nejma Aidoun signature" class="imageNav">
 
             <div class="navLinksRight">
-                <a href="">Formations</a>
-                <a href="">Expériences professionnelles</a>
-                <a href="">Compétences</a>
+                <a href="#education">Formations</a>
+                <a href="#experiences">Expériences professionnelles</a>
+                <a href="#skills">Compétences</a>
             </div>
         </nav>
 
@@ -43,7 +43,7 @@
         </section>
     </header>
     <main>
-        <section id="about">
+        <section id="about" class="section">
             <h1 class="title">A propos de Nejma</h1>
             <div class="lineMain"></div>
             <div class="aboutBlocks">
@@ -66,13 +66,14 @@
                 </div>
             </div>
         </section>
-        <section id="portfolio">
+
+        <section id="portfolio" class="section">
             <h1 class="title">Portfolio</h1>
             <div class="lineMain"></div>
             <div class="carrousel">
                 <div class="slides">
-                    <a href="https://angular.nejma-aidoun.fr/"><img src="assets/img/shonenjump.jpeg" alt="" /></a>
-                    
+                    <a href="https://github.com/AidounNejma"><img src="assets/img/github.png" alt="" /></a>
+
                     <div class="info">
                         <p class="text"></p>
                     </div>
@@ -82,9 +83,80 @@
             </div>
         </section>
 
-        <section id="">
-            <h1 class=""></h1>
+        <section id="education" class="section">
+            <h1 class="title">Formations</h1>
+            <div class="lineMain"></div>
+            <div class="chronoLine">
+                <ul class="timeline">
+                    <li data-year="2014" data-text="Bac ST2S (mention bien)"></li>
+                    <li data-year="2015" data-text="BTS SP3S (1 année validée)"></li>
+                    <li data-year="2019" data-text="Licence LLCER Anglais (2 années validées)"></li>
+                    <li data-year="2020" data-text="Bachelor de communication (non terminé)"></li>
+                    <li data-year="2021" data-text="Certification de développeur Web"></li>
+                </ul>
+            </div>
         </section>
+
+        <section id="experiences" class="section">
+            <h1 class="title">Expériences</h1>
+            <div class="lineMain"></div>
+            <div class="timeline2">
+                <div class="container left">
+                    <div class="content">
+                        <h2>2021</h2>
+                        <p>Développeuse web stagiaire</p>
+                        <p>Biyn Media</p>
+                    </div>
+                </div>
+                <div class="container right">
+                    <div class="content">
+                        <h2>2020</h2>
+                        <p>Responsable de communication</p>
+                        <p>SchoolOnline University</p>
+                    </div>
+                </div>
+                <div class="container left">
+                    <div class="content">
+                        <h2>2017</h2>
+                        <p>Chef de caisse</p>
+                        <p>Monoprix</p>
+                    </div>
+                </div>
+                <div class="container right">
+                    <div class="content">
+                        <h2>2015</h2>
+                        <p>Coordinatrice de service stagiaire</p>
+                        <p>ADAR</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="skills" class="section">
+            <h1 class="title">Compétences</h1>
+            <div class="lineMain"></div>
+            <div class="inlineIcons">
+            <div class="icons">
+                <i class="fas fa-code"></i>
+                <p>HTML - CSS - JS - Jquery - PHP - SQL</p>
+                <p>Angular - Symfony - WordPress</p>
+            </div>
+
+            <div class="icons">
+                <i class="fas fa-language"></i>
+                <p>Anglais: C2</p>
+                <p>Espagnol : B1</p>
+            </div>
+
+            <div class="icons">
+                <i class="fab fa-google"></i>
+                <p>Suite bureautique Google: maîtrise</p>
+                <p>Certification Google Ateliers Numériques</p>
+            </div>
+        </div>
+            
+        </section>
+
     </main>
     <footer>
 
