--- a/index.html
+++ b/index.html
@@ -136,30 +136,46 @@
             <h1 class="title">Compétences</h1>
             <div class="lineMain"></div>
             <div class="inlineIcons">
-            <div class="icons">
-                <i class="fas fa-code"></i>
-                <p>HTML - CSS - JS - Jquery - PHP - SQL</p>
-                <p>Angular - Symfony - WordPress</p>
+                <div class="icons">
+                    <i class="fas fa-code"></i>
+                    <p>HTML - CSS - JS - Jquery - PHP - SQL</p>
+                    <p>Angular - Symfony - WordPress</p>
+                </div>
+
+                <div class="icons">
+                    <i class="fas fa-language"></i>
+                    <p>Anglais: C2</p>
+                    <p>Espagnol : B1</p>
+                </div>
+
+                <div class="icons">
+                    <i class="fab fa-google"></i>
+                    <p>Suite bureautique Google: maîtrise</p>
+                    <p>Certification Google Ateliers Numériques</p>
+                </div>
             </div>
 
-            <div class="icons">
-                <i class="fas fa-language"></i>
-                <p>Anglais: C2</p>
-                <p>Espagnol : B1</p>
-            </div>
-
-            <div class="icons">
-                <i class="fab fa-google"></i>
-                <p>Suite bureautique Google: maîtrise</p>
-                <p>Certification Google Ateliers Numériques</p>
-            </div>
-        </div>
-            
         </section>
 
     </main>
     <footer>
-
+        <h1 class="title">Contact</h1>
+        <div class="lineMain"></div>
+        <div class="footer">
+            <div class="footerLeft">
+                <i class="fas fa-phone"> 06 99 39 61 83</i>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, cupiditate!</p>
+            </div>
+            <div class="footerRight">
+                <form action="">
+                    <input type="text" placeholder="Prenom">
+                    <input type="text" placeholder="Nom">
+                    <input type="email" placeholder="Email">
+                    <textarea name="" id="" cols="30" rows="10"></textarea>
+                    <button type="submit">Envoyer</button>
+                </form>
+            </div>
+        </div>
     </footer>
 </body>
 
