--- a/index.html
+++ b/index.html
@@ -165,6 +165,8 @@
             <div class="footerLeft">
                 <i class="fas fa-phone"> 06 99 39 61 83</i>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, cupiditate!</p>
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-linkedin"></i>
             </div>
             <div class="footerRight">
                 <form action="">
