--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="lineMain"></div>
             <div class="carrousel">
                 <div class="slides">
-                    <a href="https://github.com/AidounNejma"><img src="assets/img/github.png" alt="" /></a>
+                    <a href="https://github.com/AidounNejma" class="linkCarrousel"><img src="assets/img/github.png" alt="" class="imageCarrousel" /></a>
 
                     <div class="info">
                         <p class="text"></p>
