--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </section>
     </header>
     <main>
-        <section id="about" class="section">
+        <section id="about" class="section reveal">
             <h1 class="title">A propos de Nejma</h1>
             <div class="lineMain"></div>
             <div class="aboutBlocks">
@@ -67,12 +67,12 @@
             </div>
         </section>
 
-        <section id="portfolio" class="section">
+        <section id="portfolio" class="section reveal">
             <h1 class="title">Portfolio</h1>
             <div class="lineMain"></div>
             <div class="carrousel">
                 <div class="slides">
-                    <a href="https://github.com/AidounNejma" class="linkCarrousel"><img src="assets/img/github.png" alt="" class="imageCarrousel" /></a>
+                    <a href="" class="linkCarrousel"><img src="assets/img/1.jpeg" alt="" class="imageCarrousel" /></a>
 
                     <div class="info">
                         <p class="text"></p>
@@ -83,7 +83,7 @@
             </div>
         </section>
 
-        <section id="education" class="section">
+        <section id="education" class="section reveal">
             <h1 class="title">Formations</h1>
             <div class="lineMain"></div>
             <div class="chronoLine">
@@ -97,7 +97,7 @@
             </div>
         </section>
 
-        <section id="experiences" class="section">
+        <section id="experiences" class="section reveal">
             <h1 class="title">Expériences</h1>
             <div class="lineMain"></div>
             <div class="timeline2">
@@ -132,7 +132,7 @@
             </div>
         </section>
 
-        <section id="skills" class="section">
+        <section id="skills" class="section reveal">
             <h1 class="title">Compétences</h1>
             <div class="lineMain"></div>
             <div class="inlineIcons">
@@ -158,16 +158,21 @@
         </section>
 
     </main>
+
     <footer>
         <h1 class="title">Contact</h1>
         <div class="lineMain"></div>
+
         <div class="footer">
             <div class="footerLeft">
-                <i class="fas fa-phone"> 06 99 39 61 83</i>
+                <i class="fas fa-phone" id="phone"> 06 99 39 61 83</i>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, cupiditate!</p>
-                <i class="fab fa-facebook"></i>
-                <i class="fab fa-linkedin"></i>
+                <div class="iconsFooter">
+                    <a href="https://www.facebook.com/NejmaAidoun"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.linkedin.com/in/nejma-aidoun/"><i class="fab fa-linkedin"></i></a>
+                </div>
             </div>
+
             <div class="footerRight">
                 <form action="">
                     <input type="text" placeholder="Prenom">
@@ -178,7 +183,9 @@
                 </form>
             </div>
         </div>
+
     </footer>
+    <script type="text/javascript" src="assets/js/script.js"></script>
 </body>
 
 </html>
