--- a/index.html
+++ b/index.html
@@ -27,14 +27,15 @@
                 <a href="#experiences">Expériences professionnelles</a>
                 <a href="#skills">Compétences</a>
             </div>
+            <img src="assets/img/burger.png" alt="image menu burger" class="mobile">
         </nav>
 
         <div class="line"></div>
 
         <section class="header">
             <div class="headerLeft">
-                <h1>Rise Above The Storm,</h1>
-                <h1>You Will Find The Sunshine</h1>
+                <h1>Développeuse Web</h1>
+                <h1>Stage à partir de 3 Avril 2022</h1>
                 <div class="line2"></div>
             </div>
             <div class="headerRight">
@@ -43,17 +44,15 @@
         </section>
     </header>
     <main>
-        <section id="about" class="section reveal">
-            <h1 class="title">A propos de Nejma</h1>
-            <div class="lineMain"></div>
+        <section id="about" class="section reveal-1">
+            <h1 class="title reveal-2">A propos de Nejma</h1>
+            <div class="lineMain reveal-2"></div>
             <div class="aboutBlocks">
-                <div class="aboutLeft">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta adipisci eveniet incidunt
-                        repellendus. Excepturi facilis tenetur ex, officiis amet vel aliquid distinctio neque temporibus
-                        qui laboriosam blanditiis magni numquam velit.
-                        Nam velit adipisci quaerat eligendi in fugit odio ducimus repellendus repellat neque, accusamus,
-                        ea corporis fugiat impedit nulla sapiente voluptatum aut ad, harum dolorem sed? Autem incidunt
-                        repellat sequi facere.</p>
+                <div class="aboutLeft reveal-3">
+                    <p> Forte de mes expériences professionnelles diverses, j'ai pu acquérir de nouvelles compétences
+                        dans le management des équipes et la communication.
+                        Mon objectif aujourd'hui est d'acquérir de nouvelles compétences dans le domaine du WEB et
+                        notamment de la programmation.</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium amet, eveniet non minima
                         optio tempora odit repellat architecto ducimus atque corrupti at ipsam et provident omnis esse!
                         Eum, voluptate dolore.
@@ -61,16 +60,16 @@
                         necessitatibus architecto ullam tenetur repellat ratione atque temporibus, minima dolor illo
                         optio quasi impedit amet consequuntur sint officiis! Eos?</p>
                 </div>
-                <div class="aboutRight">
+                <div class="aboutRight reveal-3">
                     <img src="assets/img/blockOne.jpeg" alt="">
                 </div>
             </div>
         </section>
 
-        <section id="portfolio" class="section reveal">
-            <h1 class="title">Portfolio</h1>
-            <div class="lineMain"></div>
-            <div class="carrousel">
+        <section id="portfolio" class="section reveal-1">
+            <h1 class="title reveal-2">Portfolio</h1>
+            <div class="lineMain reveal-2"></div>
+            <div class="carrousel reveal-3">
                 <div class="slides">
                     <a href="" class="linkCarrousel"><img src="assets/img/1.jpeg" alt="" class="imageCarrousel" /></a>
 
@@ -83,46 +82,46 @@
             </div>
         </section>
 
-        <section id="education" class="section reveal">
-            <h1 class="title">Formations</h1>
-            <div class="lineMain"></div>
+        <section id="education" class="section reveal-1">
+            <h1 class="title reveal-2">Formations</h1>
+            <div class="lineMain reveal-2"></div>
             <div class="chronoLine">
-                <ul class="timeline">
-                    <li data-year="2014" data-text="Bac ST2S (mention bien)"></li>
-                    <li data-year="2015" data-text="BTS SP3S (1 année validée)"></li>
-                    <li data-year="2019" data-text="Licence LLCER Anglais (2 années validées)"></li>
-                    <li data-year="2020" data-text="Bachelor de communication (non terminé)"></li>
-                    <li data-year="2021" data-text="Certification de développeur Web"></li>
+                <ul class="timeline" class="reveal-2">
+                    <li data-year="2014" data-text="Bac ST2S (mention bien)" class="reveal-3"></li>
+                    <li data-year="2015" data-text="BTS SP3S (1 année validée)" class="reveal-4"></li>
+                    <li data-year="2019" data-text="Licence LLCER Anglais (2 années validées)" class="reveal-5"></li>
+                    <li data-year="2020" data-text="Bachelor de communication (non terminé)" class="reveal-6"></li>
+                    <li data-year="2021" data-text="Certification de développeur Web" class="reveal-7"></li>
                 </ul>
             </div>
         </section>
 
-        <section id="experiences" class="section reveal">
-            <h1 class="title">Expériences</h1>
-            <div class="lineMain"></div>
+        <section id="experiences" class="section reveal-1">
+            <h1 class="title reveal-2">Expériences</h1>
+            <div class="lineMain reveal-2"></div>
             <div class="timeline2">
-                <div class="container left">
+                <div class="container left reveal-3">
                     <div class="content">
                         <h2>2021</h2>
                         <p>Développeuse web stagiaire</p>
                         <p>Biyn Media</p>
                     </div>
                 </div>
-                <div class="container right">
+                <div class="container right reveal-4">
                     <div class="content">
                         <h2>2020</h2>
                         <p>Responsable de communication</p>
                         <p>SchoolOnline University</p>
                     </div>
                 </div>
-                <div class="container left">
+                <div class="container left reveal-5">
                     <div class="content">
                         <h2>2017</h2>
                         <p>Chef de caisse</p>
                         <p>Monoprix</p>
                     </div>
                 </div>
-                <div class="container right">
+                <div class="container right reveal-6">
                     <div class="content">
                         <h2>2015</h2>
                         <p>Coordinatrice de service stagiaire</p>
@@ -132,10 +131,10 @@
             </div>
         </section>
 
-        <section id="skills" class="section reveal">
-            <h1 class="title">Compétences</h1>
-            <div class="lineMain"></div>
-            <div class="inlineIcons">
+        <section id="skills" class="section reveal-1">
+            <h1 class="title reveal-2">Compétences</h1>
+            <div class="lineMain reveal-2"></div>
+            <div class="inlineIcons reveal-3">
                 <div class="icons">
                     <i class="fas fa-code"></i>
                     <p>HTML - CSS - JS - Jquery - PHP - SQL</p>
@@ -159,14 +158,14 @@
 
     </main>
 
-    <footer>
-        <h1 class="title">Contact</h1>
-        <div class="lineMain"></div>
+    <footer class="reveal-1">
+        <h1 class="title reveal-2">Contact</h1>
+        <div class="lineMain reveal-2"></div>
 
-        <div class="footer">
+        <div class="footer reveal-3">
             <div class="footerLeft">
                 <i class="fas fa-phone" id="phone"> 06 99 39 61 83</i>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, cupiditate!</p>
+                <p>Prenez contact avec moi ! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor voluptates ducimus consequatur.</p>
                 <div class="iconsFooter">
                     <a href="https://www.facebook.com/NejmaAidoun"><i class="fab fa-facebook"></i></a>
                     <a href="https://www.linkedin.com/in/nejma-aidoun/"><i class="fab fa-linkedin"></i></a>
