--- a/index.html
+++ b/index.html
@@ -28,6 +28,24 @@
                 <a href="#skills">Compétences</a>
             </div>
             <img src="assets/img/burger.png" alt="image menu burger" class="mobile">
+
+            <div class="sideMenu">
+                <div class="sideMenuHeading">
+                    <img src="assets/img/signature.png" alt="Nejma Aidoun signature" class="signatureH">
+                    <img src="assets/img/close.png" alt="Croix fermeture menu" class="closeButton">
+                </div>
+                <div class="lineSideMenu"></div>
+                <div class="sideMenuLinks">
+                    <a href="#">Accueil</a>
+                    <a href="#about">A propos</a>
+                    <a href="#portfolio">Portfolio</a>
+                    <a href="#education">Formation</a>
+                    <a href="#experience">Expériences professionnelles</a>
+                    <a href="#skills">Compétences</a>
+                    <a href="#contact">Contact</a>
+                </div>
+            </div>
+
         </nav>
 
         <div class="line"></div>
@@ -159,7 +177,8 @@
         <div class="footer reveal-3">
             <div class="footerLeft">
                 <i class="fas fa-phone" id="phone"> 06 99 39 61 83</i>
-                <p>Prenez contact avec moi ! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor voluptates ducimus consequatur.</p>
+                <p>Prenez contact avec moi ! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor voluptates
+                    ducimus consequatur.</p>
                 <div class="iconsFooter">
                     <a href="https://www.facebook.com/NejmaAidoun"><i class="fab fa-facebook"></i></a>
                     <a href="https://www.linkedin.com/in/nejma-aidoun/"><i class="fab fa-linkedin"></i></a>
