--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
             <div class="lineMain reveal-2"></div>
             <div class="carrousel reveal-3">
                 <div class="slides">
-                    <a href="" class="linkCarrousel"><img src="assets/img/1.jpeg" alt="" class="imageCarrousel" /></a>
+                    <a href="https://github.com/AidounNejma" class="linkCarrousel"><img src="assets/img/1.jpeg" alt="" class="imageCarrousel" /></a>
 
                     <div class="info">
-                        <p class="text"></p>
+                        <p class="text">Projets Github</p>
                     </div>
                 </div>
                 <i class="fas fa-chevron-circle-left" id="back"></i>
