--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                 </div>
                 <div class="lineSideMenu"></div>
                 <div class="sideMenuLinks">
-                    <a href="#">Accueil</a>
-                    <a href="#about">A propos</a>
-                    <a href="#portfolio">Portfolio</a>
-                    <a href="#education">Formation</a>
-                    <a href="#experience">Expériences professionnelles</a>
-                    <a href="#skills">Compétences</a>
-                    <a href="#contact">Contact</a>
+                    <a href="#" class="sideLinks">Accueil</a>
+                    <a href="#about" class="sideLinks">A propos</a>
+                    <a href="#portfolio" class="sideLinks">Portfolio</a>
+                    <a href="#education" class="sideLinks">Formation</a>
+                    <a href="#experience" class="sideLinks">Expériences professionnelles</a>
+                    <a href="#skills" class="sideLinks">Compétences</a>
+                    <a href="#contact" class="sideLinks">Contact</a>
                 </div>
             </div>
 
@@ -170,7 +170,7 @@
 
     </main>
 
-    <footer class="reveal-1">
+    <footer class="reveal-1" id="contact">
         <h1 class="title reveal-2">Contact</h1>
         <div class="lineMain reveal-2"></div>
 
