--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <section class="header">
             <div class="headerLeft">
                 <h1>Développeuse Web</h1>
-                <h2>Stage à partir de 3 Avril 2022</h2>
+                <h2>Stage à partir du 6 Avril 2022</h2>
                 <div class="line2"></div>
             </div>
             <div class="headerRight">
