--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
             <div class="lineMain reveal-2"></div>
             <div class="carrousel reveal-3">
                 <div class="slides">
-                    <a href="https://github.com/AidounNejma" class="linkCarrousel"><img src="assets/img/1.jpeg" alt="" class="imageCarrousel" /></a>
+                    <a href="https://github.com/AidounNejma" class="linkCarrousel"><img src="assets/img/1.jpeg" alt=""
+                            class="imageCarrousel" /></a>
 
                     <div class="info">
                         <p class="text">Projets Github</p>
@@ -166,6 +167,17 @@
                 </div>
             </div>
 
+        </section>
+        <section id="softSkills" class="section reveal-1">
+            <h1 class="title reveal-2">Compétences transversales</h1>
+            <div class="lineMain reveal-2"></div>
+            <p class="softP responsability reveal-3">Responsabilité</p>
+            <p class="softP communication reveal-4">Communcation</p>
+            <p class="softP management reveal-5">Management</p>
+            <p class="softP teaching reveal-6">Pédagogie</p>
+            <p class="softP friendly reveal-7">Sociable</p>
+            <p class="softP curiosity reveal-7">Curiosité</p>
+            <img src="assets/img/softskills.png" alt="softskills" class="softImg">
         </section>
 
     </main>
