--- a/index.html
+++ b/index.html
@@ -172,10 +172,10 @@
             <h1 class="title reveal-2">Compétences transversales</h1>
             <div class="lineMain reveal-2"></div>
             <p class="softP responsability reveal-3">Responsabilité</p>
-            <p class="softP communication reveal-4">Communcation</p>
+            <p class="softP communication reveal-4">Communication</p>
             <p class="softP management reveal-5">Management</p>
             <p class="softP teaching reveal-6">Pédagogie</p>
-            <p class="softP friendly reveal-7">Sociable</p>
+            <p class="softP friendly reveal-7">Sociabilité</p>
             <p class="softP curiosity reveal-7">Curiosité</p>
             <img src="assets/img/softskills.png" alt="softskills" class="softImg">
         </section>
